force-app/main/default/objects/Sales_Agreement__c/fields/Registration_Number_Method__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number_Method__c</fullName>
    <label>Registration Number Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LTA Assigned Number (for new car)</fullName>
            </value>
            <value>
                <fullName>Number Retention (for new car) &amp; Acceptance of Random Number (for used car)</fullName>
            </value>
            <value>
                <fullName>Number Retention (for new car) &amp; Use of Purchase-Bid Number (for used car)</fullName>
            </value>
            <value>
                <fullName>Number Retention by Customer &amp; Wavier of Retention Fee</fullName>
            </value>
            <value>
                <fullName>Purchasing-Bid Number (for new car)</fullName>
            </value>
            <value>
                <fullName>To be decided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>