force-app/main/default/objects/Sales_Agreement__c/fields/Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type__c</fullName>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CYCLE &amp; CARRIAGE COY VEH</fullName>
            </value>
            <value>
                <fullName>DEMO CAR</fullName>
            </value>
            <value>
                <fullName>DIPLOMATIC REGISTRATION</fullName>
            </value>
            <value>
                <fullName>EXPORT SALES</fullName>
            </value>
            <value>
                <fullName>INTER COMPANY SALES FOR CV</fullName>
            </value>
            <value>
                <fullName>INTER COMPANY SALES</fullName>
            </value>
            <value>
                <fullName>BUS</fullName>
            </value>
            <value>
                <fullName>C</fullName>
                <label>COMPANY REGISTRATION</label>
            </value>
            <value>
                <fullName>CHARITY VEH W/O ARF</fullName>
            </value>
            <value>
                <fullName>HANDICAP</fullName>
            </value>
            <value>
                <fullName>GOODS CUM PASSENGER (W/O COE)</fullName>
            </value>
            <value>
                <fullName>LIGHT GOODS VEHICLE</fullName>
            </value>
            <value>
                <fullName>LOCAL SALES</fullName>
            </value>
            <value>
                <fullName>OFF PEAK CAR</fullName>
            </value>
            <value>
                <fullName>P</fullName>
                <label>PRIVATE REGISTRATION</label>
            </value>
            <value>
                <fullName>RENTAL COMPANY</fullName>
            </value>
            <value>
                <fullName>RU SALES W/O COE</fullName>
            </value>
            <value>
                <fullName>GOODS CUM PASSENGER</fullName>
            </value>
            <value>
                <fullName>INSURANCE CLAIM FOR DAMAGE (NO GST)</fullName>
            </value>
            <value>
                <fullName>CYCLE &amp; CARRIAGE 100% SPONSORSHIP</fullName>
            </value>
            <value>
                <fullName>STATUTORY BOARD</fullName>
            </value>
            <value>
                <fullName>STAT BOARD INCL GST&amp;COE</fullName>
            </value>
            <value>
                <fullName>STATUTORY BOARD W/O COE</fullName>
            </value>
            <value>
                <fullName>TAXI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>