force-app/main/default/objects/Sales_Agreement__c/fields/Requested_Release_Letter__c.field-meta.xml
<CustomField>
    <fullName>Requested_Release_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check if the release letter is requested before</description>
    <label>Requested Release Letter</label>
    <type>Checkbox</type>
</CustomField>