force-app/main/default/objects/Sales_Agreement__c/fields/RSP_And_Paid_Accessories__c.field-meta.xml
<CustomField>
    <fullName>RSP_And_Paid_Accessories__c</fullName>
    <formula>RSP_for_COE__c +  Paid_Accessories__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RSP + Paid Accessories</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>