force-app/main/default/objects/Sales_Agreement__c/fields/RSP_for_COE__c.field-meta.xml
<CustomField>
    <fullName>RSP_for_COE__c</fullName>
    <formula>Package_List_Price__c + VES__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RSP for COE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>