force-app/main/default/objects/Sales_Agreement__c/fields/SA_COE_Charged_Rebate__c.field-meta.xml
<CustomField>
    <fullName>SA_COE_Charged_Rebate__c</fullName>
    <formula>IF(COE_Charged_Rebate__c &lt; 0, &quot;(&quot;, &quot;&quot;) &amp;
	IF(ABS(COE_Charged_Rebate__c) &gt;= 1000000, TEXT(FLOOR(ABS(COE_Charged_Rebate__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
	IF(ABS(COE_Charged_Rebate__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(COE_Charged_Rebate__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
	RIGHT(TEXT(FLOOR(ABS(COE_Charged_Rebate__c))), 3) &amp; &quot;.&quot; &amp;
	IF(MOD(ABS(COE_Charged_Rebate__c) , 1) * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(MOD(ABS(COE_Charged_Rebate__c) , 1), 2) * 100), TEXT(MIN(ROUND(MOD(ABS(COE_Charged_Rebate__c) , 1), 2) * 100, 99))) &amp;
	IF(COE_Charged_Rebate__c &lt; 0, &quot;)&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COE Charged/Rebate</label>
    <type>Text</type>
</CustomField>