force-app/main/default/objects/Sales_Agreement__c/fields/SA_COE_Refund__c.field-meta.xml
<CustomField>
    <fullName>SA_COE_Refund__c</fullName>
    <formula>IF(ISBLANK(COE_Refund__c) &amp;&amp; ISNULL(COE_Refund__c), &quot;&quot;, &quot;- S$ &quot; &amp; TEXT(ABS(COE_Refund__c)))</formula>
    <label>COE Refund</label>
    <type>Text</type>
</CustomField>