force-app/main/default/objects/Sales_Agreement__c/fields/SA_Promo_Discount__c.field-meta.xml
<CustomField>
    <fullName>SA_Promo_Discount__c</fullName>
    <formula>IF(ISBLANK(Promo_Discount__c) &amp;&amp; ISNULL(Promo_Discount__c), &quot;&quot;, &quot;- S$ &quot; &amp; TEXT(ABS(Promo_Discount__c)))</formula>
    <label>Promo Discount</label>
    <type>Text</type>
</CustomField>