force-app/main/default/objects/Sales_Agreement__c/fields/SA_Vehicle_List_Price__c.field-meta.xml
<CustomField>
    <fullName>SA_Vehicle_List_Price__c</fullName>
    <formula>IF(Package_List_Price__c &lt; 0, &quot;(&quot;, &quot;&quot;) &amp;
	IF(ABS(Package_List_Price__c ) &gt;= 1000000, TEXT(FLOOR(ABS(Package_List_Price__c ) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
	IF(ABS(Package_List_Price__c ) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(Package_List_Price__c ) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
	RIGHT(TEXT(FLOOR(ABS(Package_List_Price__c ))), 3) &amp; &quot;.&quot; &amp;
	IF(MOD(ABS(Package_List_Price__c ) , 1) * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(MOD(ABS(Package_List_Price__c ) , 1), 2) * 100), TEXT(MIN(ROUND(MOD(ABS(Package_List_Price__c ) , 1), 2) * 100, 99))) &amp;
	IF(Package_List_Price__c &lt; 0, &quot;)&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle List Price</label>
    <type>Text</type>
</CustomField>