force-app/main/default/objects/Sales_Agreement__c/fields/SA_Vehicle_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>SA_Vehicle_Purchase_Price__c</fullName>
    <formula>IF(Vehicle_Purchase_Price__c &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; 
IF(ABS(Vehicle_Purchase_Price__c) &gt;= 1000000, TEXT(FLOOR(ABS(Vehicle_Purchase_Price__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp; 
IF(ABS(Vehicle_Purchase_Price__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(Vehicle_Purchase_Price__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(ABS(Vehicle_Purchase_Price__c))), 3) &amp; &quot;.&quot; &amp; 
IF(MOD(ABS(Vehicle_Purchase_Price__c) , 1) * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(MOD(ABS(Vehicle_Purchase_Price__c) , 1), 2) * 100), TEXT(MIN(ROUND(MOD(ABS(Vehicle_Purchase_Price__c) , 1), 2) * 100, 99))) &amp; 
IF(Vehicle_Purchase_Price__c &lt; 0, &quot;)&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Purchase Price</label>
    <type>Text</type>
</CustomField>