force-app/main/default/objects/Sales_Agreement__c/fields/Sales_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Sales_Consultant__c</fullName>
    <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Consultant</label>
    <type>Text</type>
</CustomField>