force-app/main/default/objects/Sales_Agreement__c/fields/SC_Remarks__c.field-meta.xml
<CustomField>
    <fullName>SC_Remarks__c</fullName>
    <label>SC Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>