force-app/main/default/objects/Sales_Agreement__c/fields/Secondary_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_No__c</fullName>
    <label>Secondary Contact Number</label>
    <type>Phone</type>
</CustomField>