force-app/main/default/objects/Sales_Agreement__c/fields/Seller_Account_No__c.field-meta.xml
<CustomField>
    <fullName>Seller_Account_No__c</fullName>
    <label>Seller Account No</label>
    <length>18</length>
    <type>Text</type>
</CustomField>