force-app/main/default/objects/Sales_Agreement__c/fields/Seller_Building_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller_Building_Name__c</fullName>
    <label>Seller Building Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>