force-app/main/default/objects/Sales_Agreement__c/fields/Seller_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller_Last_Name__c</fullName>
    <label>Seller Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>