force-app/main/default/objects/Sales_Agreement__c/fields/Seller_NRIC__c.field-meta.xml
<CustomField>
    <fullName>Seller_NRIC__c</fullName>
    <label>Seller NRIC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>