force-app/main/default/objects/Sales_Agreement__c/fields/Seller_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Seller_Postal_Code__c</fullName>
    <label>Seller Postal Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>