force-app/main/default/objects/Sales_Agreement__c/fields/Service_Center_Email__c.field-meta.xml
<CustomField>
    <fullName>Service_Center_Email__c</fullName>
    <formula>CASE(TEXT(PreferredServiceCenter__c),
&apos;Alexandra&apos;, CASE(FranchiseCode__c,&apos;MITPC&apos;,&apos;alexmitdefect@cyclecarriage.com.sg&apos;,&apos;KIAPC&apos;,&apos;alexkiadefect@cyclecarriage.com.sg&apos;,
&apos;lengkeedefect@cyclecarriage.com.sg&apos;),
&apos;Eunos&apos;, &apos;eunosdefect@cyclecarriage.com.sg&apos;,
&apos;Pandan Gardens&apos;, &apos;pgdefect@cyclecarriage.com.sg&apos;,
&apos;Sin Ming&apos;, &apos;sinmingdefect@cyclecarriage.com.sg&apos;,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Center Email</label>
    <type>Text</type>
</CustomField>