force-app/main/default/objects/Sales_Agreement__c/fields/service_credit_effective_years__c.field-meta.xml
<CustomField>
    <fullName>service_credit_effective_years__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Service Credit Effective Years</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>