force-app/main/default/objects/Sales_Agreement__c/fields/ServiceCenterAddress__c.field-meta.xml
<CustomField>
    <fullName>ServiceCenterAddress__c</fullName>
    <formula>CASE(TEXT(PreferredServiceCenter__c), 
        &apos;Alexandra&apos;, &apos;241 Alexandra Road, Singapore 159931&apos;,
        &apos;Eunos&apos;, &apos;330 Ubi Road 3, Singapore 408650&apos;,
        &apos;Pandan Gardens&apos;, &apos;209 Pandan Gardens, Singapore 609339&apos;,
        &apos;Sin Ming&apos;, &apos;600 Sin Ming Avenue, Singapore 575733&apos;,
		NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Center Address</label>
    <type>Text</type>
</CustomField>