force-app/main/default/objects/Sales_Agreement__c/fields/ServiceCenterDescription__c.field-meta.xml
<CustomField>
    <fullName>ServiceCenterDescription__c</fullName>
    <formula>CASE(TEXT(PreferredServiceCenter__c), 
        &apos;Alexandra&apos;, &apos;Alexandra Service Centre&apos;,
        &apos;Eunos&apos;, &apos;Eunos Service Centre&apos;,
        &apos;Pandan Gardens&apos;, &apos;Pandan Gardens Service Centre&apos;,
        &apos;Sin Ming&apos;, &apos;Sin Ming Service Centre&apos;,
		NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Center Description</label>
    <type>Text</type>
</CustomField>