force-app/main/default/objects/Sales_Agreement__c/fields/ServiceCenterPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ServiceCenterPostalCode__c</fullName>
    <formula>CASE(TEXT(PreferredServiceCenter__c), 
        &apos;Alexandra&apos;, &apos;159931&apos;,
        &apos;Eunos&apos;, &apos;408650&apos;,
        &apos;Pandan Gardens&apos;, &apos;609339&apos;,
        &apos;Sin Ming&apos;, &apos;575733&apos;,
		NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Center Postal Code</label>
    <type>Text</type>
</CustomField>