force-app/main/default/objects/Sales_Agreement__c/fields/SFD_FIRSTINSTDT__c.field-meta.xml
<CustomField>
    <fullName>SFD_FIRSTINSTDT__c</fullName>
    <label>First Insurance Date</label>
    <type>Date</type>
</CustomField>