force-app/main/default/objects/Sales_Agreement__c/fields/SFD_LOANEXPDT__c.field-meta.xml
<CustomField>
    <fullName>SFD_LOANEXPDT__c</fullName>
    <label>Loan Expiration Date</label>
    <type>Date</type>
</CustomField>