force-app/main/default/objects/Sales_Agreement__c/fields/SFD_STATUS__c.field-meta.xml
<CustomField>
    <fullName>SFD_STATUS__c</fullName>
    <label>SFD Status</label>
    <length>16</length>
    <type>Text</type>
</CustomField>