force-app/main/default/objects/Sales_Agreement__c/fields/SOH_BRM_BRCD__c.field-meta.xml
<CustomField>
    <fullName>SOH_BRM_BRCD__c</fullName>
    <formula>Text(CreatedBy.Branch_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Code</label>
    <type>Text</type>
</CustomField>