force-app/main/default/objects/Sales_Agreement__c/fields/SOH_COESUCCESSNOTIFY__c.field-meta.xml
<CustomField>
    <fullName>SOH_COESUCCESSNOTIFY__c</fullName>
    <label>COE Success Notify</label>
    <length>16</length>
    <type>Text</type>
</CustomField>