force-app/main/default/objects/Sales_Agreement__c/fields/SOH_COMMVERIFIEDFLG__c.field-meta.xml
<CustomField>
    <fullName>SOH_COMMVERIFIEDFLG__c</fullName>
    <label>Comm Verified Flag</label>
    <length>16</length>
    <type>Text</type>
</CustomField>