force-app/main/default/objects/Sales_Agreement__c/fields/SOH_COSTTOFULCO__c.field-meta.xml
<CustomField>
    <fullName>SOH_COSTTOFULCO__c</fullName>
    <label>Cost to FULCO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>