force-app/main/default/objects/Sales_Agreement__c/fields/SOH_CREATEDBY__c.field-meta.xml
<CustomField>
    <fullName>SOH_CREATEDBY__c</fullName>
    <formula>CreatedBy.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By</label>
    <type>Text</type>
</CustomField>