force-app/main/default/objects/Sales_Agreement__c/fields/SOH_CRNAMT__c.field-meta.xml
<CustomField>
    <fullName>SOH_CRNAMT__c</fullName>
    <label>Credit Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>