force-app/main/default/objects/Sales_Agreement__c/fields/SOH_CUSTPDDDT__c.field-meta.xml
<CustomField>
    <fullName>SOH_CUSTPDDDT__c</fullName>
    <label>JIT Request Date</label>
    <type>Date</type>
</CustomField>