force-app/main/default/objects/Sales_Agreement__c/fields/SOH_FINRECDAMT__c.field-meta.xml
<CustomField>
    <fullName>SOH_FINRECDAMT__c</fullName>
    <label>Finance Received Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>