force-app/main/default/objects/Sales_Agreement__c/fields/SOH_INVNO__c.field-meta.xml
<CustomField>
    <fullName>SOH_INVNO__c</fullName>
    <label>Invoice No</label>
    <length>16</length>
    <type>Text</type>
</CustomField>