force-app/main/default/objects/Sales_Agreement__c/fields/SOH_IUD_IUDOCNO__c.field-meta.xml
<CustomField>
    <fullName>SOH_IUD_IUDOCNO__c</fullName>
    <label>IU No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>