force-app/main/default/objects/Sales_Agreement__c/fields/SOH_RECDGSTAMT__c.field-meta.xml
<CustomField>
    <fullName>SOH_RECDGSTAMT__c</fullName>
    <label>Received GST Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>