force-app/main/default/objects/Sales_Agreement__c/fields/SOH_RTM_REGTYPECD__c.field-meta.xml
<CustomField>
    <fullName>SOH_RTM_REGTYPECD__c</fullName>
    <label>Registration Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>O</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>