force-app/main/default/objects/Sales_Agreement__c/fields/SOH_SECOMM__c.field-meta.xml
<CustomField>
    <fullName>SOH_SECOMM__c</fullName>
    <label>Seller Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>