force-app/main/default/objects/Sales_Agreement__c/fields/SOH_STATUS__c.field-meta.xml
<CustomField>
    <fullName>SOH_STATUS__c</fullName>
    <label>SO Status</label>
    <length>16</length>
    <type>Text</type>
</CustomField>