force-app/main/default/objects/Sales_Agreement__c/fields/SOH_SUCCESSMONTH__c.field-meta.xml
<CustomField>
    <fullName>SOH_SUCCESSMONTH__c</fullName>
    <label>Success Month</label>
    <length>16</length>
    <type>Text</type>
</CustomField>