force-app/main/default/objects/Sales_Agreement__c/fields/SOH_USQ_QUOTENO__c.field-meta.xml
<CustomField>
    <fullName>SOH_USQ_QUOTENO__c</fullName>
    <label>Quote Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>