force-app/main/default/objects/Sales_Agreement__c/fields/SOH_VEHALLOCDT__c.field-meta.xml
<CustomField>
    <fullName>SOH_VEHALLOCDT__c</fullName>
    <label>Vehicle Allocation Date</label>
    <type>Date</type>
</CustomField>