force-app/main/default/objects/Sales_Agreement__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Booking</fullName>
            </value>
            <value>
                <fullName>Confirmation of Sale</fullName>
                <label>Pending COE &amp; Stock Allocation</label>
            </value>
            <value>
                <fullName>Request Registration</fullName>
            </value>
            <value>
                <fullName>Pending Registration</fullName>
            </value>
            <value>
                <fullName>Ready for Registration</fullName>
                <label>Ready for Delivery</label>
            </value>
            <value>
                <fullName>Car Collected</fullName>
            </value>
            <value>
                <fullName>Balance Payment</fullName>
                <isActive>false</isActive>
                <label>Balance Payment</label>
            </value>
            <value>
                <fullName>Bank Loan Application</fullName>
                <isActive>false</isActive>
                <label>Bank Loan Application</label>
            </value>
            <value>
                <fullName>COE Bidding</fullName>
                <isActive>false</isActive>
                <label>COE Bidding</label>
            </value>
            <value>
                <fullName>Car Allocation</fullName>
                <isActive>false</isActive>
                <label>Car Allocation</label>
            </value>
            <value>
                <fullName>Finance  &amp; Insurance</fullName>
                <isActive>false</isActive>
                <label>Finance  &amp; Insurance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>