force-app/main/default/objects/Sales_Agreement__c/fields/StageCancelled__c.field-meta.xml
<CustomField>
    <fullName>StageCancelled__c</fullName>
    <formula>TEXT(Stage__c) = &apos;Cancelled&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StageCancelled</label>
    <type>Checkbox</type>
</CustomField>