force-app/main/default/objects/Sales_Agreement__c/fields/StageReadyforRegistration__c.field-meta.xml
<CustomField>
    <fullName>StageReadyforRegistration__c</fullName>
    <formula>TEXT(Stage__c) = &apos;Ready for Registration&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StageReadyforRegistration</label>
    <type>Checkbox</type>
</CustomField>