force-app/main/default/objects/Sales_Agreement__c/fields/StageRequestRegistration__c.field-meta.xml
<CustomField>
    <fullName>StageRequestRegistration__c</fullName>
    <formula>TEXT(Stage__c) = &apos;Pending Registration&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StageRequestRegistration</label>
    <type>Checkbox</type>
</CustomField>