force-app/main/default/objects/Sales_Agreement__c/fields/Stock_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Stock_Reservation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Stock Reservation</label>
    <referenceTo>Stock_Reservation__c</referenceTo>
    <relationshipLabel>Sales Agreements</relationshipLabel>
    <relationshipName>Sales_Agreements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>