force-app/main/default/objects/Sales_Agreement__c/fields/Street_NameRA__c.field-meta.xml
<CustomField>
    <fullName>Street_NameRA__c</fullName>
    <label>Street Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>