force-app/main/default/objects/Sales_Agreement__c/fields/Sum_of_In_House_Support_Discount__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_In_House_Support_Discount__c</fullName>
    <label>Sum of In-House Support Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>