force-app/main/default/objects/Sales_Agreement__c/fields/Sum_of_SA_Addnl_Charges_for_CEVS__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_SA_Addnl_Charges_for_CEVS__c</fullName>
    <label>Sum of SA Addnl Charges for CEVS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>