force-app/main/default/objects/Sales_Agreement__c/fields/Surname__c.field-meta.xml
<CustomField>
    <fullName>Surname__c</fullName>
    <inlineHelpText>Family Name</inlineHelpText>
    <label>Surname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>