force-app/main/default/objects/Sales_Agreement__c/fields/Survey_SMS_Link__c.field-meta.xml
<CustomField>
    <fullName>Survey_SMS_Link__c</fullName>
    <description>Sales Survey Experience ONLY</description>
    <formula>&quot;https://cyclecarriage.getfeedback.com/r/J6Zf7V0o?gf_unique=&quot; &amp; Id &amp; &quot;&amp;Sales_Agreement_ID=&quot; &amp; Id</formula>
    <label>Survey SMS Link</label>
    <type>Text</type>
</CustomField>