force-app/main/default/objects/Sales_Agreement__c/fields/Targeted_Promo_Commission__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Promo_Commission__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Targeted Promo Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>