force-app/main/default/objects/Sales_Agreement__c/fields/Terms_months__c.field-meta.xml
<CustomField>
    <fullName>Terms_months__c</fullName>
    <formula>Terms_Years__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terms (months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>