force-app/main/default/objects/Sales_Agreement__c/fields/Terms_Years__c.field-meta.xml
<CustomField>
    <fullName>Terms_Years__c</fullName>
    <label>Terms (Years)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>