force-app/main/default/objects/Sales_Agreement__c/fields/Total_Addon_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Addon_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Addon Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>