force-app/main/default/objects/Sales_Agreement__c/fields/Total_Exclusive_SA_Acc_List_Prices__c.field-meta.xml
<CustomField>
    <fullName>Total_Exclusive_SA_Acc_List_Prices__c</fullName>
    <label>Total Exclusive SA Acc List Prices</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>