force-app/main/default/objects/Sales_Agreement__c/fields/Trade_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Trade_in_Date__c</fullName>
    <label>Trade-in Date</label>
    <type>Date</type>
</CustomField>