force-app/main/default/objects/Sales_Agreement__c/fields/TradeInBalance__c.field-meta.xml
<CustomField>
    <fullName>TradeInBalance__c</fullName>
    <formula>Trade_in_Value__c -  Full_Settlement_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade-In Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>