force-app/main/default/objects/Sales_Agreement__c/fields/UCA_Docusign_Envelope_ID__c.field-meta.xml
<CustomField>
    <fullName>UCA_Docusign_Envelope_ID__c</fullName>
    <label>UCA Docusign Envelope ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>