force-app/main/default/objects/Sales_Agreement__c/fields/UCA_Version__c.field-meta.xml
<CustomField>
    <fullName>UCA_Version__c</fullName>
    <defaultValue>1</defaultValue>
    <label>UCA Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>