force-app/main/default/objects/Sales_Agreement__c/fields/UniqueBranchCode__c.field-meta.xml
<CustomField>
    <fullName>UniqueBranchCode__c</fullName>
    <formula>CASE(TEXT( Branch_Code__c ), 
&quot;CCK&quot; , &quot;CCLCCKSGDCCK003&quot;,
&quot;CCF&quot; , &quot;CCLCCFSGDCCF005&quot;,
&quot;CCA&quot; , &quot;CCLCCASGDCNC006&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Branch Code</label>
    <type>Text</type>
</CustomField>