force-app/main/default/objects/Sales_Agreement__c/fields/Unsigned_DSA_Id__c.field-meta.xml
<CustomField>
    <fullName>Unsigned_DSA_Id__c</fullName>
    <label>Unsigned DSA Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>