force-app/main/default/objects/Sales_Agreement__c/fields/Used_Car_Make__c.field-meta.xml
<CustomField>
    <fullName>Used_Car_Make__c</fullName>
    <label>Used Car Make</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUDI</fullName>
                <label>Audi</label>
            </value>
            <value>
                <fullName>BENTLEY</fullName>
                <label>Bentley</label>
            </value>
            <value>
                <fullName>TOYOTA</fullName>
                <label>Toyota</label>
            </value>
            <value>
                <fullName>HONDA</fullName>
                <label>Honda</label>
            </value>
            <value>
                <fullName>ALFA ROMEO</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>CITROEN</fullName>
            </value>
            <value>
                <fullName>CHERVOLET</fullName>
            </value>
            <value>
                <fullName>CHERY</fullName>
            </value>
            <value>
                <fullName>CHRYSLER</fullName>
            </value>
            <value>
                <fullName>DAEWOO</fullName>
            </value>
            <value>
                <fullName>DAIHATSU</fullName>
            </value>
            <value>
                <fullName>DODGE</fullName>
            </value>
            <value>
                <fullName>FIAT</fullName>
            </value>
            <value>
                <fullName>FORD</fullName>
            </value>
            <value>
                <fullName>GEELY</fullName>
            </value>
            <value>
                <fullName>HAFEI</fullName>
            </value>
            <value>
                <fullName>HUNDAI</fullName>
            </value>
            <value>
                <fullName>ISUZU</fullName>
            </value>
            <value>
                <fullName>JAGUAR</fullName>
            </value>
            <value>
                <fullName>JEEP</fullName>
            </value>
            <value>
                <fullName>KIA</fullName>
                <label>Kia</label>
            </value>
            <value>
                <fullName>LAND ROVER</fullName>
            </value>
            <value>
                <fullName>LEXUS</fullName>
            </value>
            <value>
                <fullName>MATERIA</fullName>
            </value>
            <value>
                <fullName>MAZDA</fullName>
            </value>
            <value>
                <fullName>MERCEDES BENZ</fullName>
                <label>Mercedes Benz</label>
            </value>
            <value>
                <fullName>MINI</fullName>
            </value>
            <value>
                <fullName>MITSUBISHI</fullName>
                <label>Mitsubishi</label>
            </value>
            <value>
                <fullName>NISSAN</fullName>
                <label>Nissan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>