force-app/main/default/objects/Sales_Agreement__c/fields/VDC_Customer_Signature__c.field-meta.xml
<CustomField>
    <fullName>VDC_Customer_Signature__c</fullName>
    <description>Store the data URL for customer signature in Vehicle Delivery Certificate form</description>
    <inlineHelpText>Store the data URL for customer signature in Vehicle Delivery Certificate form</inlineHelpText>
    <label>VDC Customer Signature</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>