force-app/main/default/objects/Sales_Agreement__c/fields/VDC_OBO_Comment__c.field-meta.xml
<CustomField>
    <fullName>VDC_OBO_Comment__c</fullName>
    <label>VDC OBO Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>