force-app/main/default/objects/Sales_Agreement__c/fields/Vehicle_Condition__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Condition__c</fullName>
    <formula>TEXT( Stock_Reservation__r.Vehicle_Master__r.Vehicle_Condition__c )</formula>
    <label>Vehicle Condition</label>
    <type>Text</type>
</CustomField>