force-app/main/default/objects/Sales_Agreement__c/fields/Vehicle_Cost__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Cost__c</fullName>
    <label>Vehicle Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>