force-app/main/default/objects/Sales_Agreement__c/fields/Vehicle_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Deposit__c</fullName>
    <defaultValue>5000</defaultValue>
    <label>Vehicle Deposit</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>