force-app/main/default/objects/Sales_Agreement__c/fields/Vehicle_Duty__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Duty__c</fullName>
    <formula>Stock_Reservation__r.Vehicle_Master__r.Duty_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Duty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>