force-app/main/default/objects/Sales_Agreement__c/fields/Vehicle_Movement_Completed__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Movement_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle Movement Completed</label>
    <type>Checkbox</type>
</CustomField>