force-app/main/default/objects/Sales_Agreement__c/fields/Vehicle_PO__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_PO__c</fullName>
    <formula>Stock_Reservation__r.Vehicle_Master__r.Purchase_Order_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle PO</label>
    <type>Text</type>
</CustomField>