force-app/main/default/objects/Sales_Agreement__c/fields/Verified_by_Sales_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Verified_by_Sales_Consultant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified by Sales Consultant</label>
    <type>Checkbox</type>
</CustomField>